[package]
name = "whirlpool"
version = "0.5.0"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["metadata", "memo"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.10.0" }
spl-token-metadata-interface = { version = "0.7.0" }
solana-program = { version = "2.3.0" }
uint = { version = "0.10.0", default-features = false }
arrayref = { version = "=0.3.9" }
borsh09 = { package = "borsh", version = "1.5.7" }
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics"] }
num_enum = { version = "0.7.4" }

[dev-dependencies]
proptest = "1.7.0"
serde = "1.0.219"
serde_json = "1.0.141"

[dev-dependencies.serde_with]
version = "3.14.0"
features = ["json"]
